<resources>
    <string name="app_name" translatable="false">News Now</string>
    <string name="review">Review</string>
    <string name="search">Search</string>
    <string name="saved">Saved</string>
    <string name="setting">Setting</string>
    <string name="internet_error">Load error, try later</string>
    <string name="search_hint">Enter a search query…</string>
    <string name="search_result">Results</string>
    <string name="searching">Searching…</string>
    <string name="no_results">No results</string>
    <string name="no_more_result">No more result</string>
    <string name="wait">Please wait</string>

    <string name="system" >System</string>
    <string name="language_select">Select language</string>
    <string name="region_select">Select region</string>
    <string name="language" >Language for search</string>
    <string name="all" >All</string>
    <string name="region" >Region</string>
    <string name="defaultValue">Default</string>
    <string name="information_content">News Now is an application for viewing the latest, current news around the world. In addition, it provides a service for searching and saving articles</string>
    <string name="information_content_two" >Demo application. Sviat Kuzbyt. November 2022</string>
    <string name="information_label" >Information</string>
    <string name="no_saved">Aren\'t saved news there</string>

    <string name="links" translatable="false"><a href="https://github.com/SviatKuzbyt/News-Now">Git Hub</a>\n<a href="https://newsdata.io/">NewsData.IO - API</a>\n<a href="https://www.flaticon.com/">Flacticon - icons</a></string>
    <string name="undo" translatable="false">Back</string>
    <string name="close" translatable="false">Close</string>
    <string name="image" translatable="false">Image for news</string>
    <string name="save_news" translatable="false">Save news for later</string>
    <string name="share" translatable="false">Share news</string>
    <string name="delete_saved" translatable="false">Delete saved news</string>
    <string name="search_in_all_region" translatable="false">Пошук у всіх регіонах</string>
    <string name="about" translatable="false">News Now is an application for viewing the latest, current news around the world. In addition, it provides a service for searching and saving articles\n\nDemo application. Sviat Kuzbyt. November 2022 (updated in June 2023)\n\n<a href="https://github.com/SviatKuzbyt/News-Now">Git Hub</a>\n<a href="https://newsdata.io/">NewsData.IO - API</a>\n<a href="https://www.flaticon.com/">Flacticon - icons</a></string>
    <string name="no_app" translatable="false"> App for it don\'t found</string>
</resources>