<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingHorizontal="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRecycle"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        android:backgroundTint="?dividerColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sourceNewsRecycle">

        <ImageView
            android:id="@+id/imageNewsRecycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/image" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/sourceNewsRecycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/SecondaryText"
        app:layout_constraintStart_toEndOf="@+id/cardViewRecycle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelNewsRecycle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minHeight="75dp"
        android:textAppearance="@style/GeneralText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewRecycle"
        app:layout_constraintTop_toBottomOf="@+id/sourceNewsRecycle" />

    <TextView
        android:id="@+id/timeNewsRecycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/SecondaryText"
        app:layout_constraintBottom_toBottomOf="@+id/shareNewsRecycle"
        app:layout_constraintStart_toEndOf="@+id/cardViewRecycle"
        app:layout_constraintTop_toTopOf="@+id/shareNewsRecycle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveNewsRecycle"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/save_news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNewsRecycle"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/shareNewsRecycle"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_share_gray"
        android:contentDescription="@string/share"
        app:layout_constraintEnd_toStartOf="@+id/saveNewsRecycle"
        app:layout_constraintTop_toBottomOf="@+id/labelNewsRecycle"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?dividerColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareNewsRecycle"
        />

</androidx.constraintlayout.widget.ConstraintLayout>